--- a/css/estilo.css
+++ b/css/estilo.css
@@ -3,6 +3,15 @@
     text-align: center;
     align-content: center;
 }
+.centrar{
+    display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.centrar2{
+  justify-content: center;
+  align-items: center;
+}
 .alargado{
     width: 100%;
 }
@@ -17,5 +26,9 @@
 
 .salto{
     margin: 1em;
+}
+
+.m-0{
+    margin:0;
 }
 
